Updating nuget packages. Adding CertificateName to add api event request. Fixing an issue where the database insert for distance could try to insert a null certification value and cause the program to crash. Adding Cert Name, Website URL, and Image URL fields (with website and image not visible) to the API Add Event window. Slightly modified how the API Add Event window sets the selected Item (and what exactly said items are) in an attempt to make it easier to implement an AutoSuggestBox later on if it will ever actually allow the Text value to be set programmatically within the GetEvents() function.

--- a/ChronoKeep/UI/API/APIPage2.xaml
+++ b/ChronoKeep/UI/API/APIPage2.xaml
@@ -74,6 +74,23 @@
                 </DockPanel>
                 <DockPanel Margin="0,0,0,5">
                     <TextBlock
+                        Text="Cert Name"
+                        FontSize="15"
+                        Width="100"
+                        VerticalAlignment="Center"
+                        TextAlignment="Right"
+                        Padding="0,0,5,0"
+                        />
+                    <TextBox
+                        x:Name="certNameBox"
+                        FontSize="15"
+                        Width="180"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Stretch"
+                        />
+                </DockPanel>
+                <DockPanel Margin="0,0,0,5">
+                    <TextBlock
                         Text="Slug" 
                         FontSize="15"
                         Width="100"
@@ -100,6 +117,40 @@
                         />
                     <TextBox 
                         Name="contactBox"
+                        FontSize="15" 
+                        Width="180"
+                        VerticalAlignment="Center" 
+                        HorizontalAlignment="Stretch"
+                        />
+                </DockPanel>
+                <DockPanel Margin="0,0,0,5" Visibility="Collapsed">
+                    <TextBlock
+                        Text="Website URL"
+                        FontSize="15"
+                        Width="100"
+                        VerticalAlignment="Center" 
+                        TextAlignment="Right"
+                        Padding="0,0,5,0"
+                        />
+                    <TextBox 
+                        Name="websiteBox"
+                        FontSize="15" 
+                        Width="180"
+                        VerticalAlignment="Center" 
+                        HorizontalAlignment="Stretch"
+                        />
+                </DockPanel>
+                <DockPanel Margin="0,0,0,5" Visibility="Collapsed">
+                    <TextBlock
+                        Text="Image URL"
+                        FontSize="15"
+                        Width="100"
+                        VerticalAlignment="Center" 
+                        TextAlignment="Right"
+                        Padding="0,0,5,0"
+                        />
+                    <TextBox 
+                        Name="imageBox"
                         FontSize="15" 
                         Width="180"
                         VerticalAlignment="Center" 
