--- a/ChronoKeep/UI/Export/ExportDistanceResults.xaml
+++ b/ChronoKeep/UI/Export/ExportDistanceResults.xaml
@@ -1,30 +1,16 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.UI.Export.ExportDistanceResults"
+﻿<Window x:Class="Chronokeep.UI.Export.ExportDistanceResults"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Export"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="Export Ultrasignup Results" Height="220" Width="300" MinWidth="300" MaxWidth="300" Closing="Window_Closing"
         d:DataContext="{d:DesignInstance local:ExportDistanceResults, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
         >
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar
-            Grid.Row="0"
-            ShowMinimize="False"
-            ShowMaximize="False"
-            >
-        </ui:TitleBar>
-        <Grid Grid.Row="1">
+        <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="*"/>
@@ -42,4 +28,4 @@
             </Grid>
         </Grid>
     </Grid>
-</ui:FluentWindow>
+</Window>
