--- a/ChronoKeep/UI/Timing/WaveWindow.xaml
+++ b/ChronoKeep/UI/Timing/WaveWindow.xaml
@@ -1,32 +1,20 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.UI.Timing.WaveWindow"
+﻿<Window x:Class="Chronokeep.UI.Timing.WaveWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Timing"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="Set Wave Times"
         Height="300"
         Width="230"
         Closing="Window_Closing"
         ResizeMode="NoResize"
-        d:DataContext="{d:DesignInstance local:WaveWindow, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
         SizeToContent="Height"
         >
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar
-            Grid.Row="0">
-        </ui:TitleBar>
-        <Grid Grid.Row="1">
+        <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
@@ -60,4 +48,4 @@
             </DockPanel>
         </Grid>
     </Grid>
-</ui:FluentWindow>
+</Window>
