--- a/ChronoKeep/UI/API/RemoteReadersWindow.xaml
+++ b/ChronoKeep/UI/API/RemoteReadersWindow.xaml
@@ -1,16 +1,12 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.UI.API.RemoteReadersWindow"
+﻿<Window x:Class="Chronokeep.UI.API.RemoteReadersWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.API"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="Remote Readers"
         d:DataContext="{d:DesignInstance local:RemoteReadersWindow, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         Height="400"
         Width="1090"
         ResizeMode="NoResize"
@@ -19,18 +15,10 @@
         Closed="Window_Closed"
         >
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="30" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar
-            x:Name="titleBar"
-            Grid.Row="0">
-        </ui:TitleBar>
-        <StackPanel Grid.Row="1" Width="1090">
+        <StackPanel Width="1090">
             <StackPanel x:Name="loadingPanel" Width="300" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20,20,10,20" Height="300">
                 <TextBlock Text="Loading..." FontSize="36" Margin="5,5,5,5" TextAlignment="Center"/>
-                <ui:ProgressRing IsIndeterminate="True" Margin="5,5,5,5"/>
+                <ProgressBar IsIndeterminate="True" Margin="5,5,5,5"/>
             </StackPanel>
             <ListView x:Name="apiListView" Visibility="Collapsed" Margin="10,0,10,10"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
@@ -38,4 +26,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</ui:FluentWindow>
+</Window>
