--- a/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
+++ b/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
@@ -1,19 +1,15 @@
-﻿<ui:FluentWindow
-        x:Class="Chronokeep.UI.Announcer.AnnouncerWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Chronokeep.UI.Announcer"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-        mc:Ignorable="d"
-        Title="Announcer" Height="450" Width="1000" Closing="Window_Closing"
-        d:DataContext="{d:DesignInstance local:AnnouncerWindow, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
-        WindowStartupLocation="CenterScreen"
-        >
+﻿<Window
+    x:Class="Chronokeep.UI.Announcer.AnnouncerWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Chronokeep.UI.Announcer"
+    mc:Ignorable="d"
+    Title="Announcer" Height="450" Width="1000" Closing="Window_Closing"
+    d:DataContext="{d:DesignInstance local:AnnouncerWindow, IsDesignTimeCreatable=True}"
+    WindowStartupLocation="CenterScreen"
+    >
     <Grid>
         <Grid.Resources>
             <Style TargetType="ListViewItem" x:Key="alternatingStyle">
@@ -25,13 +21,10 @@
             </Style>
         </Grid.Resources>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30" />
             <RowDefinition Height="35" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <ui:TitleBar Grid.Row="0">
-        </ui:TitleBar>
-        <Grid Grid.Row="1" Margin="18,0" x:Name="AnnouncerHeader" Visibility="Collapsed">
+        <Grid Grid.Row="0" Margin="18,0" x:Name="AnnouncerHeader" Visibility="Collapsed">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="180" />
                 <ColumnDefinition Width="230" />
@@ -49,7 +42,7 @@
             <TextBlock Grid.Column="5" Text="Age G" FontSize="20" Margin="4,4" />
             <TextBlock Grid.Column="6" Text="Comments" FontSize="20" Margin="4,4" />
         </Grid>
-        <Grid Grid.Row="1" Margin="18,0" x:Name="ResultsHeader">
+        <Grid Grid.Row="0" Margin="18,0" x:Name="ResultsHeader">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="230" />
                 <ColumnDefinition Width="80" />
@@ -64,7 +57,7 @@
             <TextBlock Grid.Column="4" Text="Age G" FontSize="20" Margin="4,4" />
         </Grid>
         <ListView 
-            Grid.Row="2"
+            Grid.Row="1"
             x:Name="AnnouncerBox"
             ScrollViewer.CanContentScroll="True"
             ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
@@ -97,7 +90,7 @@
             </ListView.ItemTemplate>
         </ListView>
         <ListView
-            Grid.Row="2"
+            Grid.Row="1"
             x:Name="ResultsBox" 
             ScrollViewer.CanContentScroll="True"
             ScrollViewer.HorizontalScrollBarVisibility="Disabled"
@@ -125,4 +118,4 @@
             </ListView.ItemTemplate>
         </ListView>
     </Grid>
-</ui:FluentWindow>
+</Window>
