--- a/ChronoKeep/UI/ChipAssignment/ChipTool.xaml
+++ b/ChronoKeep/UI/ChipAssignment/ChipTool.xaml
@@ -1,10 +1,9 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.UI.ChipAssignment.ChipTool"
+﻿<Window x:Class="Chronokeep.UI.ChipAssignment.ChipTool"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.ChipAssignment"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="Chip Tool"
         Height="450"
@@ -13,55 +12,42 @@
         MinWidth="390"
         BorderThickness="1"
         Closing="Window_Closing"
-        d:DataContext="{d:DesignInstance local:ChipTool, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
         SizeToContent="Height"
         >
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <ui:TitleBar
-            Grid.Row="0">
-        </ui:TitleBar>
-        <Grid Grid.Row="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid Grid.Row="0">
-                <Button Content="Add Range" Width="100" Height="35" HorizontalAlignment="Left" Margin="10,10,10,10" Click="AddRange_Click" TabIndex="1" />
-                <Button Width="80" Height="35" Content="Save" HorizontalAlignment="Right" Margin="10,10,95,10" Click="Save_Click" TabIndex="2" />
-                <Button Width="80" Height="35" Content="Cancel" HorizontalAlignment="Right" Margin="10,10,10,10" Click="Cancel_Click" TabIndex="3" />
-            </Grid>
-            <Grid Grid.Row="1" Margin="5,0,5,5">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Margin="10,0,0,0" Text="Start Bib #" />
-                <TextBlock Grid.Column="1" Margin="10,0,0,0" Text="End Bib #" />
-                <TextBlock Grid.Column="2" Margin="10,0,0,0" Text="Start Tag #" />
-                <TextBlock Grid.Column="3" Margin="10,0,0,0" Text="End Tag #" />
-            </Grid>
-            <Grid x:Name="itemsWindow" Grid.Row="2">
-                <ListBox x:Name="correlationBox" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" KeyboardNavigation.TabNavigation="Continue" >
-                    <ListBox.ItemContainerStyle>
-                        <Style TargetType="ListBoxItem">
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                            <Setter Property="VerticalContentAlignment" Value="Center"/>
-                        </Style>
-                    </ListBox.ItemContainerStyle>
-                </ListBox>
-            </Grid>
+        <Grid Grid.Row="0">
+            <Button Content="Add Range" Width="100" Height="35" HorizontalAlignment="Left" Margin="10,10,10,10" Click="AddRange_Click" TabIndex="1" />
+            <Button Width="80" Height="35" Content="Save" HorizontalAlignment="Right" Margin="10,10,95,10" Click="Save_Click" TabIndex="2" />
+            <Button Width="80" Height="35" Content="Cancel" HorizontalAlignment="Right" Margin="10,10,10,10" Click="Cancel_Click" TabIndex="3" />
+        </Grid>
+        <Grid Grid.Row="1" Margin="5,0,5,5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Margin="10,0,0,0" Text="Start Bib #" />
+            <TextBlock Grid.Column="1" Margin="10,0,0,0" Text="End Bib #" />
+            <TextBlock Grid.Column="2" Margin="10,0,0,0" Text="Start Tag #" />
+            <TextBlock Grid.Column="3" Margin="10,0,0,0" Text="End Tag #" />
+        </Grid>
+        <Grid x:Name="itemsWindow" Grid.Row="2">
+            <ListBox x:Name="correlationBox" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" KeyboardNavigation.TabNavigation="Continue" >
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                        <Setter Property="VerticalContentAlignment" Value="Center"/>
+                    </Style>
+                </ListBox.ItemContainerStyle>
+            </ListBox>
         </Grid>
     </Grid>
-</ui:FluentWindow>
+</Window>
