--- a/ChronoKeep/UI/EventWindows/NewEventWindow.xaml
+++ b/ChronoKeep/UI/EventWindows/NewEventWindow.xaml
@@ -1,31 +1,19 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.NewEventWindow"
+﻿<Window x:Class="Chronokeep.NewEventWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="New Event"
         ResizeMode="NoResize"
         Closing="Window_Closing"
         Topmost="True"
         SizeToContent="Height"
-        d:DataContext="{d:DesignInstance local:NewEventWindow, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
         >
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="30" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar
-            Grid.Row="0">
-        </ui:TitleBar>
-        <StackPanel Grid.Row="1" Margin="5">
+        <StackPanel Margin="5">
             <DockPanel Margin="10,0,10,0">
                 <TextBlock Text="Name" Margin="10,10,5,10" FontSize="16" Width="75" TextAlignment="Right" VerticalAlignment="Center"/>
                 <TextBox x:Name="nameBox" FontSize="16" Margin="5,10,10,10" TextWrapping="Wrap" KeyUp="Keyboard_Up" />
@@ -38,11 +26,11 @@
                 <TextBlock Text="Date" Margin="10,10,5,10" FontSize="16" Width="75" TextAlignment="Right" VerticalAlignment="Center"/>
                 <DatePicker x:Name="datePicker" Margin="5,10,10,10" KeyUp="Keyboard_Up" FontSize="16"/>
             </DockPanel>
-            <ui:AutoSuggestBox Name="oldEvent" FontSize="16" Margin="20,10,20,10" PlaceholderText="Copy from old event?"/>
+            <ComboBox Name="oldEvent" FontSize="16" Margin="20,10,20,10"/>
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
                 <Button Content="Submit" Margin="20,10,10,15" Width="120" Click="Submit_Click" FontSize="16" Height="35"/>
                 <Button Content="Cancel" Margin="10,10,20,15" Width="120"  Click="Cancel_Click" FontSize="16" Height="35"/>
             </StackPanel>
         </StackPanel>
     </Grid>
-</ui:FluentWindow>
+</Window>
