--- a/ChronoKeep/UI/Import/ImportFileWindow.xaml
+++ b/ChronoKeep/UI/Import/ImportFileWindow.xaml
@@ -1,28 +1,17 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.ImportFileWindow"
+﻿<Window x:Class="Chronokeep.ImportFileWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="ImportFileWindow" Height="600" Width="500" MinWidth="450"
         Closing="Window_Closing"
         d:DataContext="{d:DesignInstance local:ImportFileWindow, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
         >
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar
-            Grid.Row="0">
-        </ui:TitleBar>
-        <Grid Name="MainGrid" Grid.Row="1">
+        <Grid Name="MainGrid">
             <Grid.RowDefinitions>
                 <RowDefinition Height="85" Name="Header"/>
                 <RowDefinition Height="1*"/>
@@ -47,4 +36,4 @@
             <Frame x:Name="Frame"  NavigationUIVisibility="Hidden" IsTabStop="False" Grid.Row="1"/>
         </Grid>
     </Grid>
-</ui:FluentWindow>
+</Window>
