--- a/ChronoKeep/UI/MainPages/DashboardPage.xaml
+++ b/ChronoKeep/UI/MainPages/DashboardPage.xaml
@@ -6,14 +6,12 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Chronokeep.UI.MainPages"
       xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
       d:DesignHeight="450"
       d:DesignWidth="660"
       Title="DashboardPage"
       Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       >
-
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -33,7 +31,7 @@
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            <ui:Button
+            <Button
                 Name="newEvent"
                 Content="New Event"
                 FontSize="16"
@@ -44,7 +42,7 @@
                 Click="NewEvent_Click"
                 Height="40"
                 />
-            <ui:Button
+            <Button
                 Name="importEvent"
                 Content="Import Event"
                 FontSize="16"
@@ -55,7 +53,7 @@
                 Click="ImportEvent_Click"
                 Height="40"
                 />
-            <ui:Button
+            <Button
                 Name="saveEvent"
                 Content="Save Event"
                 FontSize="16"
@@ -66,7 +64,7 @@
                 Click="SaveEvent_Click"
                 Height="40"
                 />
-            <ui:Button
+            <Button
                 Name="changeEvent"
                 Content="Change Event"
                 FontSize="16"
@@ -77,7 +75,7 @@
                 Click="ChangeEvent_Click"
                 Height="40"
                 />
-            <ui:Button
+            <Button
                 Name="deleteEvent"
                 Content="Delete Event"
                 FontSize="16"
@@ -124,7 +122,7 @@
                 Orientation="Horizontal"
                 HorizontalAlignment="Center"
                 >
-                    <ui:Button
+                    <Button
                     Name="editButton"
                     Content="Edit"
                     FontSize="16"
@@ -134,7 +132,7 @@
                     Margin="10,5,10,5"
                     Click="EditButton_Click"
                     />
-                    <ui:Button
+                    <Button
                     Name="cancelButton"
                     Content="Cancel"
                     FontSize="16"
