--- a/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
+++ b/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
@@ -4,7 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:Chronokeep.UI.MainPages"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+        
         mc:Ignorable="d"
         d:DesignHeight="450"
         d:DesignWidth="800"
@@ -111,7 +111,7 @@
                     <ComboBoxItem Content="Name" />
                     <ComboBoxItem Content="Bib" />
                 </ComboBox>
-                <ui:AutoSuggestBox 
+                <TextBox
                     Name="SearchBox"
                     Margin="10,0,10,0"
                     TextChanged="SearchBox_TextChanged"
@@ -119,7 +119,6 @@
                     Height="45"
                     VerticalContentAlignment="Center"
                     HorizontalContentAlignment="Center"
-                    PlaceholderText="Search"
                     />
                 <Button 
                     Name="Add"
