--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -5,7 +5,6 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Chronokeep.UI.MainPages"
-      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
       d:DesignHeight="700" d:DesignWidth="800"
       Title="SettingsPage">
@@ -63,19 +62,19 @@
             <ScrollViewer VerticalScrollBarVisibility="Visible">
                 <StackPanel Grid.Column="0">
                     <DockPanel>
-                        <TextBlock Text="Company Name" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Company Name" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                         <TextBox Name="CompanyNameBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                     </DockPanel>
                     <DockPanel>
-                        <TextBlock Text="Contact Email" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Contact Email" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                         <TextBox Name="ContactEmailBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                     </DockPanel>
                     <DockPanel Grid.Column="0">
-                        <TextBlock Text="Default Timing System" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Default Timing System" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                         <ComboBox Name="DefaultTimingBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                     </DockPanel>
                     <DockPanel Grid.Column="0">
-                        <TextBlock Text="Theme Color" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Theme Color" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                         <ComboBox Name="ThemeColorBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" SelectionChanged="ThemeColorBox_SelectionChanged" />
                     </DockPanel>
                     <Grid>
@@ -84,7 +83,7 @@
                             <ColumnDefinition Width="1*"/>
                             <ColumnDefinition Width="100"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="Export Directory" FontSize="14" Margin="10,10,10,10" Grid.Column="0" VerticalAlignment="Center"/>
+                        <Label Content="Export Directory" FontSize="14" Margin="10,10,10,10" Grid.Column="0" VerticalAlignment="Center"/>
                         <TextBox Name="DefaultExportDirBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" IsEnabled="False" Grid.Column="1"/>
                         <Button Name="ChangeExport" FontSize="14" Height="35" Margin="0,10,10,10" HorizontalAlignment="Stretch" Grid.Column="2" Content="Change" Click="ChangeExport_Click"/>
                     </Grid>
@@ -94,9 +93,9 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="40" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="Upload Interval" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" Grid.Column="0"/>
+                        <Label Content="Upload Interval" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" Grid.Column="0"/>
                         <Slider x:Name="uploadSlider" IsSnapToTickEnabled="True" TickFrequency="5" Minimum="5" Maximum="60" ValueChanged="uploadSlider_ValueChanged" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
-                        <TextBlock FontSize="14" x:Name="uploadBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" TextAlignment="Center"/>
+                        <Label FontSize="14" x:Name="uploadBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
                     </Grid>
                     <Grid Height="55">
                         <Grid.ColumnDefinitions>
@@ -104,9 +103,9 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="40" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="Download Interval" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Download Interval" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
                         <Slider x:Name="downloadSlider" IsSnapToTickEnabled="True" TickFrequency="5" Minimum="5" Maximum="60" ValueChanged="downloadSlider_ValueChanged" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
-                        <TextBlock FontSize="14" x:Name="downloadBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" TextAlignment="Center"/>
+                        <Label FontSize="14" x:Name="downloadBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
                     </Grid>
                     <Grid Height="55">
                         <Grid.ColumnDefinitions>
@@ -114,12 +113,12 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="40" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="Announcer Window" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Announcer Window" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
                         <Slider x:Name="announcerSlider" IsSnapToTickEnabled="True" TickFrequency="1" Minimum="1" Maximum="120" ValueChanged="announcerSlider_ValueChanged" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Margin="0,0,10,0"/>
-                        <TextBlock FontSize="14" x:Name="announcerBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" TextAlignment="Center"/>
+                        <Label FontSize="14" x:Name="announcerBlock" Width="30" Margin="0,10,10,10" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
                     </Grid>
                     <DockPanel>
-                        <TextBlock Text="Alarm Sound" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Alarm Sound" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
                         <Button Content="Play" Height="35" Width="50" Name="PlayBtn" Click="PlayBtn_Click"  FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center"/>
                         <ComboBox Name="AlarmSoundBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center">
                             <ComboBoxItem Content="Alert 1" Uid="1" IsSelected="True"/>
@@ -141,48 +140,48 @@
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="105"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="Program Identifier" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" Grid.Column="0" />
+                        <Label Content="Program Identifier" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" Grid.Column="0" />
                         <TextBox Name="UniqueProgramID" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" HorizontalContentAlignment="Stretch" IsEnabled="False" Grid.Column="1" />
                         <Button x:Name="RegenerateUniqueProgramIDButton" Content="Regenerate" Margin="0,10,10,10" Click="RegenerateUniqueProgramIDButton_Click" Grid.Column="2" />
                     </Grid>
                     <DockPanel>
-                        <TextBlock Text="Registration Server Name" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Registration Server Name" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                         <TextBox Name="RegistrationServerNameBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                     </DockPanel>
                     <DockPanel>
-                        <TextBlock Text="Twilio Account SID" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Twilio Account SID" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                         <TextBox Name="TwilioAccountSIDBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                     </DockPanel>
                     <DockPanel>
-                        <TextBlock Text="Twilio Auth Token" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Twilio Auth Token" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                         <TextBox Name="TwilioAuthTokenBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                     </DockPanel>
                     <DockPanel>
-                        <TextBlock Text="Twilio Phone Number" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Twilio Phone Number" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                         <TextBox Name="TwilioPhoneNumberBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                     </DockPanel>
                     <DockPanel>
-                        <TextBlock Text="Mailgun From Name" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Mailgun From Name" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                         <TextBox Name="MailgunFromNameBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                     </DockPanel>
                     <DockPanel>
-                        <TextBlock Text="Mailgun From Email" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Mailgun From Email" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                         <TextBox Name="MailgunFromEmailBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                     </DockPanel>
                     <DockPanel>
-                        <TextBlock Text="Mailgun API Key" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Mailgun API Key" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                         <TextBox Name="MailgunAPIKeyBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                     </DockPanel>
                     <DockPanel>
-                        <TextBlock Text="Mailgun Domain" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                        <Label Content="Mailgun Domain" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                         <TextBox Name="MailgunAPIURLBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                     </DockPanel>
                 </StackPanel>
             </ScrollViewer>
             <StackPanel Grid.Column="1">
-                <CheckBox Name="UpdatePage" Content="Auto-save changes?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
-                <CheckBox Name="ExitNoPrompt" Content="Never prompt before exit?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
-                <CheckBox Name="CheckUpdates" Content="Check for updates?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" />
+                <CheckBox Name="UpdatePage" Content="Auto-save changes?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center"/>
+                <CheckBox Name="ExitNoPrompt" Content="Never prompt before exit?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center"/>
+                <CheckBox Name="CheckUpdates" Content="Check for updates?" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center"/>
             </StackPanel>
         </Grid>
     </Grid>
