--- a/ChronoKeep/UI/MainWindow.xaml
+++ b/ChronoKeep/UI/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:FluentWindow
+﻿<Window
         x:Class="Chronokeep.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,14 +7,7 @@
         mc:Ignorable="d"
         Title="Chronokeep" Height="700" Width="1320" MinHeight="600" MinWidth="800"
         Closing="Window_Closing" Loaded="Window_Loaded"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         xmlns:local="clr-namespace:Chronokeep.UI"
-        d:DataContext="{d:DesignInstance local:MainWindow, IsDesignTimeCreatable=True}"
-        d:Background="{DynamicResource ApplicationBackgroundBrush}"
-        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
         >
     <Grid>
@@ -22,154 +15,84 @@
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar
-            FontSize="14"
-            Grid.Row="0"
-            Grid.Column="0"
-            Grid.ColumnSpan="2"
-            Margin="36,0,0,0"
-            >
-        </ui:TitleBar>
-        <ui:NavigationView
-            PaneDisplayMode="LeftMinimal"
-            IsBackButtonVisible="Collapsed"
-            x:Name="RootNavigation"
-            Grid.Column="0"
-            Grid.Row="0"
-            Grid.RowSpan="2"
-            FrameMargin="0"
-            Margin="0,5,0,0"
-            Transition="FadeInWithSlide"
-            MaxWidth="150"
-            >
-            <ui:NavigationView.MenuItems>
-                <ui:NavigationViewItem
-                    Content="Dashboard"
-                    Click="DashboardButton_Click"
-                    x:Name="dashboardButton"
-                    HorizontalAlignment="Stretch"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Home24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
-                <ui:NavigationViewItem
-                    Content="Timing"
-                    Click="TimingButton_Click"
-                    x:Name="timingButton"
-                    HorizontalAlignment="Stretch"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="ClipboardClock24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
-                <ui:NavigationViewItem
-                    Content="Announcer"
-                    Click="Announcer_Click"
-                    x:Name="announcerButton"
-                    HorizontalAlignment="Stretch"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="AlertUrgent24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
-                <ui:NavigationViewItem
-                    Content="Participants"
-                    Click="ParticipantsButton_Click"
-                    x:Name="participantsButton"
-                    HorizontalAlignment="Stretch"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Person24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
-                <ui:NavigationViewItem
-                    Content="Chips"
-                    Click="ChipsButton_Click"
-                    x:Name="chipsButton"
-                    HorizontalAlignment="Stretch"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="DeveloperBoard24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
-                <ui:NavigationViewItem
-                    Content="Locations"
-                    Click="LocationsButton_Click"
-                    x:Name="locationsButton"
-                    HorizontalAlignment="Stretch"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Map24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
-                <ui:NavigationViewItem
-                    Content="Distances"
-                    Click="DistancesButton_Click"
-                    x:Name="distancesButton"
-                    HorizontalAlignment="Stretch"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Ruler24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
-                <ui:NavigationViewItem
-                    Content="Segments"
-                    Click="SegmentsButton_Click"
-                    x:Name="segmentsButton"
-                    HorizontalAlignment="Stretch"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Organization24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
-                <ui:NavigationViewItem
-                    Content="Age Groups"
-                    Click="AgegroupsButton_Click"
-                    x:Name="agegroupsButton"
-                    HorizontalAlignment="Stretch"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Trophy24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
-            </ui:NavigationView.MenuItems>
-            <ui:NavigationView.FooterMenuItems>
-                <ui:NavigationViewItem
-                    Content="Settings"
-                    Click="SettingsButton_Click"
-                    x:Name="settingsButton"
-                    HorizontalAlignment="Stretch"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Settings24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
-                <ui:NavigationViewItem
-                    Content="About"
-                    Click="AboutButton_Click"
-                    x:Name="aboutButton"
-                    HorizontalAlignment="Stretch"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="QuestionCircle24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
-            </ui:NavigationView.FooterMenuItems>
-        </ui:NavigationView>
+        <ListView Grid.Column="0" SelectionMode="Single">
+            <ListViewItem 
+                Content="Dashboard"
+                x:Name="dashboardButton"
+                Selected="DashboardButton_Click"
+                HorizontalAlignment="Stretch"
+                />
+            <ListViewItem 
+                Content="Timing"
+                x:Name="timingButton"
+                Selected="TimingButton_Click"
+                HorizontalAlignment="Stretch"
+                />
+            <ListViewItem 
+                Content="Announcer"
+                x:Name="announcerButton"
+                Selected="Announcer_Click"
+                HorizontalAlignment="Stretch"
+                />
+            <ListViewItem 
+                Content="Participants"
+                x:Name="participantsButton"
+                Selected="ParticipantsButton_Click"
+                HorizontalAlignment="Stretch"
+                />
+            <ListViewItem 
+                Content="Chips"
+                x:Name="chipsButton"
+                Selected="ChipsButton_Click"
+                HorizontalAlignment="Stretch"
+                />
+            <ListViewItem 
+                Content="Locations"
+                x:Name="locationsButton"
+                Selected="LocationsButton_Click"
+                HorizontalAlignment="Stretch"
+                />
+            <ListViewItem 
+                Content="Distances"
+                x:Name="distancesButton"
+                Selected="DistancesButton_Click"
+                HorizontalAlignment="Stretch"
+                />
+            <ListViewItem 
+                Content="Segments"
+                x:Name="segmentsButton"
+                Selected="SegmentsButton_Click"
+                HorizontalAlignment="Stretch"
+                />
+            <ListViewItem 
+                Content="Age Groups"
+                x:Name="agegroupsButton"
+                Selected="AgegroupsButton_Click"
+                HorizontalAlignment="Stretch"
+                />
+            <ListViewItem 
+                Content="Settings"
+                x:Name="settingsButton"
+                Selected="SettingsButton_Click"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Bottom"
+                />
+            <ListViewItem
+                Content="About"
+                x:Name="aboutButton"
+                Selected="AboutButton_Click"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Bottom"
+                />
+        </ListView>
         <Grid 
             Grid.Column="1"
             Grid.Row="1"
             >
             <Border
-                Background="{DynamicResource ControlFillColorDefaultBrush}"
                 CornerRadius="8,0,0,0">
                 <Frame x:Name="TheFrame" Margin="6" />
             </Border>
         </Grid>
     </Grid>
-</ui:FluentWindow>
+</Window>
