--- a/ChronoKeep/UI/Participants/ChangeMultiParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ChangeMultiParticipantWindow.xaml
@@ -1,26 +1,16 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.UI.Participants.ChangeMultiParticipantWindow"
+﻿<Window x:Class="Chronokeep.UI.Participants.ChangeMultiParticipantWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Participants"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="Modify Participants" Height="250" Width="250" ResizeMode="NoResize" Closing="Window_Closing"
         d:DataContext="{d:DesignInstance local:ChangeMultiParticipantWindow, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
         >
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar Grid.Row="0">
-        </ui:TitleBar>
-        <StackPanel VerticalAlignment="Center" Grid.Row="1">
+        <StackPanel VerticalAlignment="Center">
             <TextBlock Text="Switch Participants to" FontSize="14" VerticalAlignment="Center" Width="210"/>
             <ComboBox Name="DistanceBox" Width="210" FontSize="16" Margin="10,5,10,5"/>
             <Grid>
@@ -33,4 +23,4 @@
             </Grid>
         </StackPanel>
     </Grid>
-</ui:FluentWindow>
+</Window>
