--- a/ChronoKeep/UI/Timing/EditRawReadsWindow.xaml
+++ b/ChronoKeep/UI/Timing/EditRawReadsWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.UI.Timing.EditRawReadsWindow"
+﻿<Window x:Class="Chronokeep.UI.Timing.EditRawReadsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,28 +6,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Timing"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="Edit" Height="230" Width="250" ResizeMode="NoResize"
         d:DataContext="{d:DesignInstance local:EditRawReadsWindow, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
         >
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar
-            Grid.Row="0"
-            ShowMinimize="False"
-            ShowMaximize="False"
-            >
-        </ui:TitleBar>
-        <Grid Grid.Row="1" HorizontalAlignment="Center">
-            <Grid.ColumnDefinitions>
+        <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100"/>
                 <ColumnDefinition Width="140"/>
             </Grid.ColumnDefinitions>
@@ -42,16 +27,16 @@
             <TextBlock Text="Time" FontSize="14" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" TextAlignment="Center"/>
             <TextBox Name="DaysBox" FontSize="14" Grid.Column="0" Grid.Row="2" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Margin="5,5,5,5" KeyDown="Enter_KeyDown" PreviewTextInput="DaysBox_PreviewTextInput"/>
             <xctk:MaskedTextBox Name="TimeBox" FontSize="14" Grid.Column="1" Grid.Row="2" ValueDataType="{x:Type s:String}" Mask="00:00:00.000" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Margin="5,5,5,5" KeyDown="Enter_KeyDown"/>
-            <Grid Grid.Row="3" Grid.ColumnSpan="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <RadioButton
+        <Grid Grid.Row="3" Grid.ColumnSpan="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <RadioButton
                     Content="Add"
                     Grid.Column="0"
                     Grid.Row="0"
@@ -61,7 +46,7 @@
                     KeyDown="Enter_KeyDown"
                     Margin="10,0,5,0"
                     />
-                <RadioButton
+            <RadioButton
                     Content="Subtract"
                     Grid.Column="1"
                     Grid.Row="0"
@@ -70,7 +55,7 @@
                     KeyDown="Enter_KeyDown"
                     Margin="5,0,0,0"
                     />
-                <Button
+            <Button
                     Content="Submit"
                     Name="Submit"
                     Grid.Column="0"
@@ -81,7 +66,7 @@
                     Width="100"
                     Height="35"
                     />
-                <Button
+            <Button
                     Content="Cancel"
                     Name="Cancel"
                     Grid.Column="1"
@@ -92,7 +77,6 @@
                     Width="100"
                     Height="35"
                     />
-            </Grid>
         </Grid>
     </Grid>
-</ui:FluentWindow>
+</Window>
