--- a/ChronoKeep/UI/Timing/Import/ImportLogWindow.xaml
+++ b/ChronoKeep/UI/Timing/Import/ImportLogWindow.xaml
@@ -1,30 +1,17 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.UI.Timing.Import.ImportLogWindow"
+﻿<Window x:Class="Chronokeep.UI.Timing.Import.ImportLogWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Timing.Import"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="Load Log"
         Closing="Window_Closing"
         d:DataContext="{d:DesignInstance local:ImportLogWindow, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
         SizeToContent="Height"
         >
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar
-            Grid.Row="0">
-        </ui:TitleBar>
-        <Grid Grid.Row="1">
-            <Frame x:Name="Frame"  NavigationUIVisibility="Hidden" IsTabStop="False" />
-        </Grid>
+        <Frame x:Name="Frame"  NavigationUIVisibility="Hidden" IsTabStop="False" />
     </Grid>
-</ui:FluentWindow>
+</Window>
