--- a/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
+++ b/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.UI.Timing.ManualEntryWindow"
+﻿<Window x:Class="Chronokeep.UI.Timing.ManualEntryWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:s="clr-namespace:System;assembly=mscorlib"
@@ -6,27 +6,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Timing"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+        
         mc:Ignorable="d"
         Title="Manual Entry" Height="345" Width="300" Closing="Window_Closing" SizeToContent="Height"
         d:DataContext="{d:DesignInstance local:ManualEntryWindow, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
         >
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar
-            Grid.Row="0"
-            ShowMinimize="False"
-            ShowMaximize="False"
-            >
-        </ui:TitleBar>
-        <StackPanel VerticalAlignment="Center" Grid.Row="1">
+        <StackPanel VerticalAlignment="Center">
             <DockPanel>
                 <TextBlock Text="Bib" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right" VerticalAlignment="Center"/>
                 <TextBox Name="BibBox" FontSize="16" Margin="5,10,10,10" TextWrapping="Wrap" KeyUp="Enter_KeyDown" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
@@ -52,4 +39,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</ui:FluentWindow>
+</Window>
