--- a/ChronoKeep/UI/Timing/ReaderSettings/RFIDSettings.xaml
+++ b/ChronoKeep/UI/Timing/ReaderSettings/RFIDSettings.xaml
@@ -1,16 +1,12 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.UI.Timing.ReaderSettings.RFIDSettings"
+﻿<Window x:Class="Chronokeep.UI.Timing.ReaderSettings.RFIDSettings"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Timing.ReaderSettings"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="RFID Settings"
         d:DataContext="{d:DesignInstance local:RFIDSettings, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
         Closed="Window_Closed"
         Height="500"
@@ -19,15 +15,7 @@
         ResizeMode="NoResize"
         >
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar
-            Grid.Row="0">
-        </ui:TitleBar>
         <StackPanel
-            Grid.Row="1"
             Margin="20,10,20,20"
             >
             <StackPanel x:Name="sacrifice" Visibility="Hidden" Margin="1,1,1,1" Height="1" />
@@ -62,15 +50,13 @@
                         Width="40"
                         Margin="5,5,5,5"
                         />
-                    <ui:Button
+                    <Button
                         Name="saveID"
                         Click="saveID_Click"
                         Margin="5,5,5,5"
-                        >
-                        <ui:Button.Icon>
-                            <ui:SymbolIcon Symbol="Save24"/>
-                        </ui:Button.Icon>
-                    </ui:Button>
+                        FontFamily="{StaticResource SymbolThemeFontFamily}"
+                        >&#xE74E;
+                    </Button>
                 </StackPanel>
                 <StackPanel
                     Orientation="Horizontal"
@@ -92,15 +78,13 @@
                         <ComboBoxItem Content="Decimal" IsSelected="True" />
                         <ComboBoxItem Content="Hexadecimal" />
                     </ComboBox>
-                    <ui:Button
+                    <Button
                         Name="saveChip"
                         Click="saveChip_Click"
                         Margin="5,5,5,5"
-                        >
-                        <ui:Button.Icon>
-                            <ui:SymbolIcon Symbol="Save24"/>
-                        </ui:Button.Icon>
-                    </ui:Button>
+                        FontFamily="{StaticResource SymbolThemeFontFamily}"
+                        >&#xE74E;
+                    </Button>
                 </StackPanel>
                 <StackPanel
                     Orientation="Horizontal"
@@ -123,15 +107,13 @@
                         <ComboBoxItem Content ="Per Box" />
                         <ComboBoxItem Content ="First Time Seen"/>
                     </ComboBox>
-                    <ui:Button
+                    <Button
                         Name="saveGatingMode"
                         Click="saveGatingMode_Click"
                         Margin="5,5,5,5"
-                        >
-                        <ui:Button.Icon>
-                            <ui:SymbolIcon Symbol="Save24"/>
-                        </ui:Button.Icon>
-                    </ui:Button>
+                        FontFamily="{StaticResource SymbolThemeFontFamily}"
+                        >&#xE74E;
+                    </Button>
                 </StackPanel>
                 <StackPanel
                     Orientation="Horizontal"
@@ -163,15 +145,13 @@
                         Width="40"
                         Margin="5,5,5,5"
                         />
-                    <ui:Button
+                    <Button
                         Name="saveGatingInterval"
                         Click="saveGatingInterval_Click"
                         Margin="5,5,5,5"
-                        >
-                        <ui:Button.Icon>
-                            <ui:SymbolIcon Symbol="Save24"/>
-                        </ui:Button.Icon>
-                    </ui:Button>
+                        FontFamily="{StaticResource SymbolThemeFontFamily}"
+                        >&#xE74E;
+                    </Button>
                 </StackPanel>
                 <StackPanel
                     Orientation="Horizontal"
@@ -193,15 +173,13 @@
                         <ComboBoxItem Content="Always" IsSelected="True" />
                         <ComboBoxItem Content="Only First Seen" />
                     </ComboBox>
-                    <ui:Button
+                    <Button
                         Name="saveWhenBeep"
                         Click="saveWhenBeep_Click"
                         Margin="5,5,5,5"
-                        >
-                        <ui:Button.Icon>
-                            <ui:SymbolIcon Symbol="Save24"/>
-                        </ui:Button.Icon>
-                    </ui:Button>
+                        FontFamily="{StaticResource SymbolThemeFontFamily}"
+                        >&#xE74E;
+                    </Button>
                 </StackPanel>
                 <StackPanel
                     Orientation="Horizontal"
@@ -224,15 +202,13 @@
                         <ComboBoxItem Content="Soft" />
                         <ComboBoxItem Content="Loud" />
                     </ComboBox>
-                    <ui:Button
+                    <Button
                         Name="saveVolume"
                         Click="saveVolume_Click"
                         Margin="5,5,5,5"
-                        >
-                        <ui:Button.Icon>
-                            <ui:SymbolIcon Symbol="Save24"/>
-                        </ui:Button.Icon>
-                    </ui:Button>
+                        FontFamily="{StaticResource SymbolThemeFontFamily}"
+                        >&#xE74E;
+                    </Button>
                 </StackPanel>
                 <StackPanel
                     Orientation="Horizontal"
@@ -264,15 +240,13 @@
                         Width="40"
                         Margin="5,5,5,5"
                         />
-                    <ui:Button
+                    <Button
                         Name="saveTimezone"
                         Click="saveTimezone_Click"
                         Margin="5,5,5,5"
-                        >
-                        <ui:Button.Icon>
-                            <ui:SymbolIcon Symbol="Save24"/>
-                        </ui:Button.Icon>
-                    </ui:Button>
+                        FontFamily="{StaticResource SymbolThemeFontFamily}"
+                        >&#xE74E;
+                    </Button>
                 </StackPanel>
                 <StackPanel
                     Orientation="Horizontal"
@@ -280,7 +254,7 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     >
-                    <ui:ToggleSwitch
+                    <CheckBox
                         x:Name="setGPSSwitch"
                         Content="Set Time From GPS?"
                         Margin="5,5,5,5"
@@ -295,7 +269,7 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     >
-                    <ui:ToggleSwitch
+                    <CheckBox
                         x:Name="readingSwitch"
                         Content="Reading?"
                         Margin="5,5,5,5"
@@ -321,4 +295,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</ui:FluentWindow>
+</Window>
