--- a/ChronoKeep/UI/Timing/RewindWindow.xaml
+++ b/ChronoKeep/UI/Timing/RewindWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.UI.Timing.RewindWindow"
+﻿<Window x:Class="Chronokeep.UI.Timing.RewindWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,23 +6,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Timing"
         xmlns:xctf="http://schemas.xceed.com/wpf/xaml/toolkit"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="Rewind" Width="400" ResizeMode="NoResize"
-        d:DataContext="{d:DesignInstance local:RewindWindow, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar
-            Grid.Row="0">
-        </ui:TitleBar>
-        <xctf:BusyIndicator Name="busyIndicator" Grid.Row="1">
+        <xctf:BusyIndicator Name="busyIndicator">
             <StackPanel VerticalAlignment="Top" Margin="10,10,10,10" Grid.Row="1">
                 <TextBlock Text="Rewind" FontSize="18" TextAlignment="Center" VerticalAlignment="Center"/>
                 <Grid>
@@ -62,4 +50,4 @@
             </StackPanel>
         </xctf:BusyIndicator>
     </Grid>
-</ui:FluentWindow>
+</Window>
