--- a/ChronoKeep/UI/Timing/SetTimeWindow.xaml
+++ b/ChronoKeep/UI/Timing/SetTimeWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.UI.Timing.SetTimeWindow"
+﻿<Window x:Class="Chronokeep.UI.Timing.SetTimeWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,24 +6,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Timing"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="Set Time" Width="400" ResizeMode="NoResize"
-        d:DataContext="{d:DesignInstance local:SetTimeWindow, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
         >
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar
-            Grid.Row="0">
-        </ui:TitleBar>
-        <StackPanel VerticalAlignment="Top" Grid.Row="1" HorizontalAlignment="Center" Margin="10,10,10,10">
+        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Center" Margin="10,10,10,10">
             <TextBlock Text="Set Time To" FontSize="18" VerticalAlignment="Center" TextAlignment="Center"/>
             <RadioButton Name="NowTimeRadioButton" Margin="10,5,10,5" VerticalContentAlignment="Center" GroupName="TimeGroup" Content="Now" FontSize="14" IsChecked="True"/>
             <RadioButton Name="SpecificTimeRadioButton" Margin="10,5,10,5" VerticalContentAlignment="Center" GroupName="TimeGroup" HorizontalAlignment="Stretch">
@@ -51,4 +39,4 @@
             </Grid>
         </StackPanel>
     </Grid>
-</ui:FluentWindow>
+</Window>
