--- a/ChronoKeep/UI/UIObjects/DialogBox.xaml
+++ b/ChronoKeep/UI/UIObjects/DialogBox.xaml
@@ -1,30 +1,22 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.UI.UIObjects.DialogBox"
+﻿<Window x:Class="Chronokeep.UI.UIObjects.DialogBox"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
         Title="" Height="Auto" Width="400" ResizeMode="NoResize" WindowStyle="ToolWindow" SizeToContent="Height"
         >
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30" />
             <RowDefinition Height="*" Name="ContentFrame"/>
             <RowDefinition Height="70" />
         </Grid.RowDefinitions>
-        <ui:TitleBar
-            Grid.Row="0" ShowMaximize="False" ShowMinimize="False">
-        </ui:TitleBar>
-        <StackPanel Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+        <StackPanel Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
             <TextBlock x:Name="MessageBox" Text="This is some random text for testing purposes." FontSize="16" TextWrapping="Wrap" Margin="15" TextAlignment="Center" VerticalAlignment="Center" />
             <TextBox x:Name="CopyBox" Text="" FontSize="16" Margin="15,0,15,15" HorizontalAlignment="Stretch" Visibility="Collapsed" TextChanged="CopyBox_TextChanged"/>
         </StackPanel>
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
@@ -33,4 +25,4 @@
             <Button Grid.Column="1" x:Name="RightButton" Content="No" Height="35" Margin="5,15,15,15" HorizontalAlignment="Stretch" />
         </Grid>
     </Grid>
-</ui:FluentWindow>
+</Window>
