--- a/ChronoKeep/Updates/DownloadWindow.xaml
+++ b/ChronoKeep/Updates/DownloadWindow.xaml
@@ -1,26 +1,16 @@
-﻿<ui:FluentWindow x:Class="Chronokeep.Updates.DownloadWindow"
+﻿<Window x:Class="Chronokeep.Updates.DownloadWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.Updates"
-        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="Chronokeep Update" Height="200" Width="400" ResizeMode="NoResize" Closing="Window_Closing"
         d:DataContext="{d:DesignInstance local:DownloadWindow, IsDesignTimeCreatable=True}"
-        ExtendsContentIntoTitleBar="True"
-        WindowBackdropType="Mica"
-        WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
         >
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="30" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ui:TitleBar Grid.Row="0">
-        </ui:TitleBar>
-        <StackPanel VerticalAlignment="Center" Grid.Row="1">
+        <StackPanel VerticalAlignment="Center">
             <StackPanel Name="UpdatePanel">
                 <TextBlock Name="DownloadLabel" Text="Update Available" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 <ProgressBar Name="DownloadProgress" Height="20" Margin="10,0,10,0" />
@@ -35,4 +25,4 @@
             </DockPanel>
         </StackPanel>
     </Grid>
-</ui:FluentWindow>
+</Window>
